--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
       href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Poppins:wght@500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/portfolio.css" />
+    <link rel="stylesheet" href="Css/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
   <body>
-    <div class="d-flex bg-warning">
-      <h1>Hello world</h1>
-      <p>Hi there</p>
-      <i class="fab fa-instagram"></i>
-    </div>
+    <div class="hero">
+   <p>Hello, I am</p>
+   <h1>Megan Hable</h1>
+   <h2 class="mb-5">Frontend developer based in Oregon</h2>
+   <div>
+   <a href="#" class="btn btn-branding">Contact Me</a>
+</div>
+</div>
   </body>
 </html>
