--- a/work.html
+++ b/work.html
@@ -23,22 +23,19 @@
     />
     <link rel="stylesheet" href="Css/styles.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Megan Hable About</title>
+    <title>Megan Hable Work</title>
 <body>
-    <div class=".content-container container">
-      <div class="row">
-        <div class="col-lg-6">
+    <div class="content-container container">
 <div class="content">
-        <h1 class="mb-4">Hello, I am Megan Hable</h1>
-        <h2 class="mb-4">Frontend developer based in Oregon</h2>
-        <p class="mb-5"></p>
-        <a href="#" class="btn btn-branding">My Projects</a>
+        <h1 class="mb-4">Take a look at what I've been working on!</h1>
+    <div class="row">
+        <div class="col-6">
+            <img src="Images/Yogurt.png" class="img-fluid mb-3 rounded" alt="">
+       <h3>Yogurt Project</h3>
+       <p>Built with HTML and CSS</p>
         </div>
-        </div>
-        <div class="col-lg-6">
-          <img src="Images/headshot.png" alt="" class="img-fluid">
-      </div>
-     </div>
+    </div> 
+    </div>
     </div>
 </body>
 </html>
