--- a/work.html
+++ b/work.html
@@ -29,12 +29,27 @@
 <div class="content">
         <h1 class="mb-4">Take a look at what I've been working on!</h1>
     <div class="row">
-        <div class="col-6">
+        <div class="col-md-6 mb-4">
             <img src="Images/Yogurt.png" class="img-fluid mb-3 rounded" alt="">
-       <h3>Yogurt Project</h3>
-       <p>Built with HTML and CSS</p>
+       <h3 class="text-center m-0">Yogurt Project</h3>
+       <p class="text-center text-muted">Built with HTML and CSS</p>
         </div>
-    </div> 
+        <div class="col-md-6 mb-4">
+            <img src="Images/weather.png" class="img-fluid mb-3 rounded" alt="">
+       <h3 class="text-center m-0">Weather Project</h3>
+       <p class="text-center text-muted">Built with HTML, CSS and JavaScript</p>
+       </div>
+       <div class="col-md-6 mb-4">
+        <img src="Images/dictionary.png" class="img-fluid mb-3 rounded" alt="">
+   <h3 class="text-center m-0">Dictionary App</h3>
+   <p class="text-center text-muted">Built with HTML, CSS and React</p>
+       </div>
+       <div class="col-md-6 mb-4">
+        <img src="Images/translation.png" class="img-fluid mb-3 rounded" alt="">
+   <h3 class="text-center m-0">Translation App</h3>
+   <p class="text-center text-muted">Built with HTML, CSS and React</p>    
+       </div>
+</div> 
     </div>
     </div>
 </body>
