--- a/index.html
+++ b/index.html
@@ -26,6 +26,24 @@
     <title>Megan Hable Portfolio</title>
   </head>
   <body>
+      <div class="container">
+        <nav class="d-flex justify-content-between">
+      <img src="Images/logo.png" class="logo d-none d-md-block" alt="">
+      <img src="Images/small-logo.jpg" class="log d-block d-md-none">
+      <ul>
+        <li class="active">
+          <a href="/">
+          Home</a></li>
+        <li>
+          <a href="/about.html">
+          About</a> </li>
+        <li>
+          <a href="/work.html">Work </a></li>
+        <li>
+          <a href="/contact.html">Contact </a></li>
+      </ul>
+    </nav>
+  </div>
     <div class="hero">
    <p>Hello, I am</p>
    <h1>Megan Hable</h1>
