--- a/index.html
+++ b/index.html
@@ -103,9 +103,34 @@
                     </p>
                     <a href="#" class="btn btn-branding-outline">Learn More</a>
                 </div>
-                </div>
+             </div>
+             <footer>
+             <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+              <div>
+                <h4>Work Inquiry</h4>
+                <p class="text-muted">Let's Work Together</p>
+              </div>
+              <div>
+                <a href class="btn btn-branding mt-3">Contact Me</a>
+              </div>
              </div>
 
+  <div class="d-flex justify-content-center mb-5">
+  <a href="mailto:megan@gmail.com" class="email-link">megan@gmail.com</a>
 </div>
+  <div class="social-links d-flex justify-content-center">
+    <a href="">
+  <i class="fa-brands fa-instagram"></i>
+</a>
+  <a href="">
+  <i class="fa-brands fa-github"></i>
+</a>
+  <a href="">
+  <i class="fa-brands fa-facebook"></i>
+</a>
+</div>
+</footer>
+</div>
+
   </body>
 </html>
