--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <a href="#" class="btn btn-branding-outline">Learn More</a>
                 </div>
              </div>
-             <footer>
+             <footer class="mt-5 mb-5">
              <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
               <div>
                 <h4>Work Inquiry</h4>
