--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="Megan Hable" content="Frontend Developer - Oregon - Apps" />
+    <meta name="description" content="Frontend Developer based in Oregon" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -25,6 +25,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Megan Hable About</title>
 <body>
+  <div class="container">
+    <nav class="d-flex justify-content-between">
+  <img src="Images/logo.png" class="logo d-none d-md-block" alt="Megan Logo">
+  <img src="Images/small-logo.jpg" class="log d-block d-md-none" alt="Megan Logo">
+  <ul>
+    <li>
+      <a href="/index.html" title="Homepage">
+      Home</a></li>
+    <li class="active">
+      <a href="/about.html" title="About Megan">
+      About</a> </li>
+    <li>
+      <a href="/work.html" title="Megan's Work">Work </a></li>
+    <li>
+      <a href="/contact.html" title="Contact Megan">Contact </a></li>
+  </ul>
+</nav>
+</div>
     <div class=".content-container container">
       <div class="row">
         <div class="col-lg-6">
@@ -32,13 +50,42 @@
         <h1 class="mb-4">Hello, I am Megan Hable</h1>
         <h2 class="mb-4">Frontend developer based in Oregon</h2>
         <p class="mb-5"></p>
-        <a href="#" class="btn btn-branding">My Projects</a>
+        <a href="/work.html" class="btn btn-branding">My Projects</a>
         </div>
         </div>
         <div class="col-lg-6">
-          <img src="Images/headshot.png" alt="" class="img-fluid">
+          <img src="Images/headshot.png" alt="" class="img-fluid" alt="Megan Hable">
       </div>
      </div>
     </div>
+    <footer class="mt-5 mb-5">
+      <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
+       <div>
+         <h3>Work Inquiry</h3>
+         <p class="text-muted">Let's Work Together</p>
+       </div>
+       <div>
+         <a href class="btn btn-branding mt-3">Contact Me</a>
+       </div>
+      </div>
+
+<div class="d-flex justify-content-center mb-5">
+<a href="mailto:megan@gmail.com" class="email-link" title="Email Megan">megan@gmail.com</a>
+</div>
+<div class="social-links d-flex justify-content-center">
+<a href="https://www.instagram.com/megan.in.oregon/" target="_blank" title="Instagram Profile">
+<i class="fa-brands fa-instagram"></i>
+</a>
+<a href="https://www.github.com/meganhable" target="_blank" title="Github Profile">
+<i class="fa-brands fa-github"></i>
+</a>
+<a href="https://www.facebooke.com/meganhable target="_blank" title="Facebook Profile"">
+<i class="fa-brands fa-facebook"></i>
+</a>
+</div>
+<p class="text-center mt-4">This project was coded my Megan and it is <a href="https://github.com/meganhable/Portfolio-Project" target="_
+"> open-sourced </a></p>
+</footer>
+</div>
 </body>
 </html>
