--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="Megan Hable" content="Frontend Developer - Oregon - Apps" />
+    <meta name="desciption" content="Megan is a Frontend Developer based in Oregon"/>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -28,19 +28,19 @@
   <body>
       <div class="container">
         <nav class="d-flex justify-content-between">
-      <img src="Images/logo.png" class="logo d-none d-md-block" alt="">
-      <img src="Images/small-logo.jpg" class="log d-block d-md-none">
+      <img src="Images/logo.png" class="logo d-none d-md-block" alt="Megan Logo">
+      <img src="Images/small-logo.jpg" class="log d-block d-md-none" alt="Megan Logo">
       <ul>
         <li class="active">
-          <a href="/">
+          <a href="/" title="Homepage">
           Home</a></li>
         <li>
-          <a href="/about.html">
+          <a href="/about.html" title="About Megan">
           About</a> </li>
         <li>
-          <a href="/work.html">Work </a></li>
+          <a href="/work.html" title="Megan's Work">Work </a></li>
         <li>
-          <a href="/contact.html">Contact </a></li>
+          <a href="/contact.html" title="Contact Megan">Contact </a></li>
       </ul>
     </nav>
   </div>
@@ -49,7 +49,7 @@
    <h1>Megan Hable</h1>
    <h2 class="mb-5">Frontend developer based in Oregon</h2>
    <div>
-   <a href="#" class="btn btn-branding">Contact Me</a>
+   <a href="/contact.html" class="btn btn-branding">Contact Me</a>
 </div>
 </div>
 <p class="text-center m-5">
@@ -58,7 +58,7 @@
 <div class="container">
     <div class="row mb-5">
         <div class="col d-none d-lg-block">
-            <img src="Images/Yogurt.png" class="img-fluid" alt="" />
+            <img src="Images/Yogurt.png" class="img-fluid" alt="Yogurt Project" />
         </div>   
         <div class="col">
             <div class="project-description">
@@ -68,7 +68,7 @@
             <p class="mb-5 text-muted">
                 Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by
             </p>
-            <a href="#" class="btn btn-branding-outline">Learn More</a>
+            <a href="/work.html" class="btn btn-branding-outline">Learn More</a>
         </div>
         </div>
      </div> 
@@ -82,16 +82,16 @@
               they live in Bookmarksgrove right at the coast of the Semantics, a
               large language ocean. A small river named Duden flows by
             </p>
-            <a href="" class="btn btn-branding-outline"> Learn more </a>
+            <a href="/work.html" class="btn btn-branding-outline"> Learn more </a>
           </div>
         </div>
         <div class="col d-none d-lg-block">
-          <img src="images/weather.png" class="img-fluid" alt="" />
+          <img src="images/weather.png" class="img-fluid" alt="Waether App" />
         </div>
       </div>
                     <div class="row"> 
                 <div class="col d-none d-lg-block">
-                    <img src="Images/dictionary.png" class="img-fluid" alt="" />
+                    <img src="Images/dictionary.png" class="img-fluid" alt="Dictionary Image" />
                 </div>
       <div class="col">
                     <div class="project-description">
@@ -101,13 +101,13 @@
                     <p class="mb-5 text-muted">
                         Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean. A small river named Duden flows by
                     </p>
-                    <a href="#" class="btn btn-branding-outline">Learn More</a>
+                    <a href="/work.html" class="btn btn-branding-outline">Learn More</a>
                 </div>
              </div>
              <footer class="mt-5 mb-5">
              <div class="contact-box justify-content-between mb-5 d-none d-md-flex">
               <div>
-                <h4>Work Inquiry</h4>
+                <h3>Work Inquiry</h3>
                 <p class="text-muted">Let's Work Together</p>
               </div>
               <div>
@@ -116,19 +116,21 @@
              </div>
 
   <div class="d-flex justify-content-center mb-5">
-  <a href="mailto:megan@gmail.com" class="email-link">megan@gmail.com</a>
+  <a href="mailto:megan@gmail.com" class="email-link" title="Email Megan">megan@gmail.com</a>
 </div>
   <div class="social-links d-flex justify-content-center">
-    <a href="">
+    <a href="https://www.instagram.com/megan.in.oregon/" target="_blank" title="Instagram Profile">
   <i class="fa-brands fa-instagram"></i>
 </a>
-  <a href="">
+  <a href="https://www.github.com/meganhable" target="_blank" title="Github Profile">
   <i class="fa-brands fa-github"></i>
 </a>
-  <a href="">
+  <a href="https://www.facebooke.com/meganhable target="_blank" title="Facebook Profile"">
   <i class="fa-brands fa-facebook"></i>
 </a>
 </div>
+<p class="text-center mt-4">This project was coded my Megan and it is <a href="https://github.com/meganhable/Portfolio-Project" target="_
+  "> open-sourced </a></p>
 </footer>
 </div>
 
