--- a/work.html
+++ b/work.html
@@ -95,7 +95,7 @@
 <i class="fa-brands fa-facebook"></i>
 </a>
 </div>
-<p class="text-center mt-4">This project was coded my Megan and it is <a href="https://github.com/meganhable/Portfolio-Project" target="_
+<p class="text-center mt-4">This project was coded by Megan and it is <a href="https://github.com/meganhable/Portfolio-Project" target="_
 "> open-sourced </a></p>
 </footer>
 </div>
